# twitch

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
tests/: test_api.py
tests/api/: test_http.py  test_oath.py  test_oauth.py
tests/test_api/: test_http.py
twitch/: __init__.py  __main__.py
twitch/api/: error.py  http.py  oauth.py
